<resources>
    <string name="app_name">Triangle</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    
    <!-- Area -->
    <string name="side_one">First Side</string>
    <string name="side_two">Second Side</string>
    <string name="side_three">Third Side</string>
    <string name="get_area">Get Area</string>
    <string name="get_hypotenuse">Get Hypotenuse</string>
    <string name="area_is">Area is:</string>
    <string name="sorry_its_not_area_values">Sorry! They\'re not triangle values.</string>
    <string name="ensure_input_all_values">Insure input three sides values</string>
    <string name="fill_first_two_field_to_get_hypo">Please, fill first two fields to get hypotenuse</string>
</resources>
